--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>WebShell - Simple HTML Boilerplate Generator</title>
+    <meta
+      name="description"
+      content="WebShell is a simple HTML boilerplate generator inspired by htmlshell."
+    />
+    <meta name="author" content="Eric Shiels" />
+    <meta name="keywords" content="WebShell, HTML boilerplate, HTML" />
   </head>
-  <body>
-  
-  </body>
+  <body></body>
 </html>
