Rename to WebBoiler to avoid confusion with web shells

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>WebShell - Simple HTML Boilerplate Generator</title>
+    <title>WebBoiler - Simple HTML Boilerplate Generator</title>
     <meta
       name="description"
-      content="WebShell is a simple HTML boilerplate generator inspired by htmlshell."
+      content="WebBoiler is a simple HTML boilerplate generator inspired by htmlshell."
     />
     <meta name="author" content="Eric Shiels" />
     <meta name="keywords" content="WebShell, HTML boilerplate, HTML" />
